# tqdm-tag

./: README.md  mkdocs.yml  pyproject.toml  usage.py
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  conf.py  index.md
docs/javascripts/: mathjax.js
src/tqdm_color/: __init__.py  tqdm_color.py
src/tqdm_tag/: tqdm_tag.py
tests/: test_tqdm_tag.py
