[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tqdm-tag"
dynamic = ["version"]
description = 'Enhance tqdm progress bars by assigning tags and colors to iterations.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["tqdm", "progress", "color", "tag", "cli"]
authors = [
  { name = "Colin Moldenhauer", email = "colin.moldenhauer@posteo.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["tqdm", "numpy"]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[project.urls]
Documentation = "https://tqdm-tag.readthedocs.io"
Issues = "https://github.com/ColinMoldenhauer/tqdm-tag/issues"
Source = "https://github.com/ColinMoldenhauer/tqdm-tag"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build.targets.sdist]
include = [
  "src/tqdm_tag",
  "README.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tqdm_tag"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tqdm_tag tests}"

[tool.coverage.run]
source_pkgs = ["tqdm_tag", "tests"]
branch = true
parallel = true
omit = [
  "src/tqdm_tag/__about__.py",
]

[tool.coverage.paths]
tqdm_tag = ["src/tqdm_tag", "*/tqdm-tag/src/tqdm_tag"]
tests = ["tests", "*/tqdm-tag/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
